fix(llm): resolve all code review findings (P0-P3) across infrastructure/llm
83 issues addressed across 53 files covering 10 review dimensions:
- P0: ProbeHandler double timeout, HttpClientErrorHandler sneaky-throw,
  RetryPolicy cause chain, GenericChatClient dispose leak, field injection
- P1: RegistrySnapshot immutability, factory validation, strategy guards,
  resilience DRY template, metrics gauge guard, client null guards,
  baseUrl parameterization, asChatModel() removal
- P2: ChatModelAdapter nesting, metrics tag rename, timeout constants,
  refresh() disabledSet preservation, SSE/logging/docs improvements
- P3: apiKey visibility, serialization docs, circuit breaker timing docs,
  FallbackExecutor O(N) note, batch warning, isDisabled() query method